--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   background-color: #f8f8f8;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 h1 {
@@ -20,6 +20,11 @@ h1 {
 
 p {
   font-family: "Noto Serif", serif;
+}
+
+.highlight {
+  font-weight: 500;
+  font-family: "Oswald", sans-serif;
 }
 
 .style-titles {
