--- a/style.css
+++ b/style.css
@@ -1,6 +1,20 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   background-color: #f8f8f8;
   font-family: "Roboto", sans-serif;
+}
+
+#menu {
+  bac
+}
+
+#menu li {
+  display: inline;
+  list-style: none;
 }
 
 h1 {
