--- a/style.css
+++ b/style.css
@@ -9,12 +9,43 @@ body {
 }
 
 #menu {
-  bac
+  background-color: #222831;
+  height: 40px;
+  width: 100%;
+  max-width: 100%;
 }
 
 #menu li {
   display: inline;
   list-style: none;
+}
+
+#title-div {
+  background-color: #222831;
+  position: relative;
+  width: 80%;
+  max-width: 80%;
+  height: 200px;
+  float: right;
+}
+
+#personal-div {
+  display: inline-block;
+  width: 20%;
+  max-width: 100%;
+  height: 500px;
+  position: absolute;
+}
+
+#personal-div img {
+  width: 100px;
+}
+
+#content-div {
+  width: 80%;
+  max-width: 100%;
+  display: inline-block;
+  float: right;
 }
 
 h1 {
@@ -24,12 +55,13 @@ h1 {
   letter-spacing: 1px;
   line-height: 0px;
   text-transform: uppercase;
-  color: #222831;
+  color: #f5f5f5;
 }
 
 #caption {
   font-family: "Noto Serif", serif;
   line-height: 10px;
+  color: #ffffff;
 }
 
 #skill-1 {
