--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body {
   max-width: 80%;
   height: 200px;
   float: right;
+  text-align: center;
 }
 
 #personal-div {
@@ -53,7 +54,7 @@ h1 {
   font-weight: 800;
   font-size: 40px;
   letter-spacing: 1px;
-  line-height: 0px;
+  line-height: 50px;
   text-transform: uppercase;
   color: #f5f5f5;
 }
@@ -92,7 +93,7 @@ p {
   font-family: "Noto Serif", serif;
 }
 
-.highlight {
+.bold-text {
   font-weight: 500;
   font-family: "Oswald", sans-serif;
 }
